# chucky

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.coverage  Dockerfile.cpu  README.md  docker-compose.yml  flake.nix  vcpkg.json
bench/: CMakeLists.txt  bench_stream_256cube_multiscale.c  bench_stream_256cube_multiscale_dim0.c  bench_stream_256cube_single.c  bench_stream_256cube_two_streams.c  bench_stream_orca2_multiscale.c  bench_stream_orca2_multiscale_dim0.c  bench_stream_orca2_single.c  bench_util.c  bench_util.h
cmake/: Blosc.cmake  CoverageReport.cmake  FindBlosc.cmake  FindLz4.cmake  FindNvcomp.cmake  FindZstd.cmake  Msvc.cmake  Nix.cmake  Warnings.cmake
docs/: design.md  devlog.md  s3-guide.md
scripts/: serve.py
src/: CMakeLists.txt  aggregate.cu  aggregate.h  compress.cu  compress.h  defs.limits.h  dimension.c  dimension.h  flush_compress_agg.c  flush_d2h_deliver.c  flush_d2h_deliver.h  index.ops.c  index.ops.h  io_queue.h  io_queue.posix.c  io_queue.win32.c  lod.cu  lod.h  lod_plan.c  lod_plan.h  metric.h  multiarray.cpu.h  platform.h  platform_cmd.h  platform_cmd.posix.c  platform_cmd.win32.c  platform_io.h  platform_io.posix.c  platform_io.win32.c  prelude.h  shard_delivery.c  stream.c  stream.config.c  stream.config.h  stream.cpu.h  stream.gpu.h  stream.h  stream_flush.c  stream_flush.h  stream_ingest.c  (+15 more)
tests/: CMakeLists.txt  index.ops.util.c  index.ops.util.h  morton.c  morton.util.c  morton.util.h  test_aggregate.c  test_aggregate_cpu.c  test_batch.c  test_bench.c  test_compress.c  test_compress_agg.c  (+38 more)
(+98 files in other folders)
